--- a/download.html
+++ b/download.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>L2 Dalma - Início</title>
+  <title>Download - L2 Dalma</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,12 +18,15 @@
     </nav>
   </header>
   <main>
-    <section class="hero fade-in">
-      <h2>Servidor L2 Dalma</h2>
-      <p>Explore o mundo de Lineage 2 com um servidor dedicado, estável e com grande comunidade. PvP balanceado, eventos diários e suporte ativo!</p>
-      <a href="download.html" class="btn">Comece Agora</a>
-    <a href="#" class="discord-btn">Entrar no Discord</a>
-  </section>
+    <section class="content">
+      <h2>Download do Cliente</h2>
+      <p>Baixe agora o cliente necessário para jogar no servidor L2 Dalma.</p>
+      <ul>
+        <li><a href="#">Download Cliente Interlude (1.5GB)</a></li>
+        <li><a href="#">Patch Atualizado</a></li>
+        <li><a href="#">Guia de Instalação (PDF)</a></li>
+      </ul>
+    </section>
   </main>
   <footer>
     <p>&copy; 2025 L2 Dalma - Todos os direitos reservados.</p>
