--- a/informacoes.html
+++ b/informacoes.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>L2 Dalma - Início</title>
+  <title>Informações - L2 Dalma</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,12 +18,16 @@
     </nav>
   </header>
   <main>
-    <section class="hero fade-in">
-      <h2>Servidor L2 Dalma</h2>
-      <p>Explore o mundo de Lineage 2 com um servidor dedicado, estável e com grande comunidade. PvP balanceado, eventos diários e suporte ativo!</p>
-      <a href="download.html" class="btn">Comece Agora</a>
-    <a href="#" class="discord-btn">Entrar no Discord</a>
-  </section>
+    <section class="content">
+      <h2>Sobre o Servidor</h2>
+      <p>Servidor Interlude x50 com sistema antibot, PvP e Siege ativos. Economia equilibrada, sem pay-to-win, e eventos semanais com premiações reais.</p>
+      <ul>
+        <li>Exp: x50 / SP: x50 / Adena: x30</li>
+        <li>Classe 2 e 3 via NPC</li>
+        <li>Auto Buff e GM Shop</li>
+        <li>Eventos automáticos diários</li>
+      </ul>
+    </section>
   </main>
   <footer>
     <p>&copy; 2025 L2 Dalma - Todos os direitos reservados.</p>
