--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <h2>Servidor L2 Dalma</h2>
       <p>Explore o mundo de Lineage 2 com um servidor dedicado, estável e com grande comunidade. PvP balanceado, eventos diários e suporte ativo!</p>
       <p>Em breve Online, para mais informações 38992176230 (Site provisorio)!</p>
+      <p>Atenciosamente Dev-DALMA!</p>
       <a href="download.html" class="btn">Comece Agora</a>
     <a href="#" class="discord-btn">Entrar no Discord</a>
   </section>
